new index page implemented with placeholder image and new sections

--- a/IslahAdmin/index.html
+++ b/IslahAdmin/index.html
@@ -165,7 +165,7 @@
                                 <a href="#">
                                     <i class="fa fa-cut"></i>
                                     <h4>Textiles</h4>
-                                    <p>Large Textile Company In Bangladesh</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </a>
 
                             </div>
@@ -177,7 +177,7 @@
                                 <a href="#">
                                     <i class="fa fa-building"></i>
                                     <h4>Industries</h4>
-                                    <p>Large Textile Company In Bangladesh</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </a>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
                                 <a href="#">
                                     <i class=" fa fa-user-secret"></i>
                                     <h4>Clients</h4>
-                                    <p>Large Textile Company In Bangladesh</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </a>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                                 <a href="#">
                                     <i class="fa  fa-trademark"></i>
                                     <h4>Brands</h4>
-                                    <p>Large Textile Company In Bangladesh</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </a>
 
                             </div>
@@ -213,7 +213,7 @@
                                 <a href="#">
                                     <i class="fa fa-reply"></i>
                                     <h4>Services</h4>
-                                    <p>Large Textile Company In Bangladesh</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </a>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                                 <a href="#">
                                     <i class=" fa fa-bar-chart-o"></i>
                                     <h4>CSR</h4>
-                                    <p>Large Textile Company In Bangladesh</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </a>
                             </div>
                         </div>
@@ -235,50 +235,147 @@
         <div class="parallax">
             <div class="aboutus">
                 <div class="container">
-                    <div class="row ptb-60">
-                        <div class="col-lg-4 col-md-4"></div>
-                        <div class="col-lg-4 col-md-4">
-                            <div class="btn btn-outline-primary btn-lg btn-block">
-                                About Us
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4">
-                            <div class="btn btn-outline-primary btn-lg btn-block">
-                                Managing Directore
-                            </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1>About US</h1><hr></hr>
                         </div>
                     </div>
-                    <div class="row ptb-60">
-                        <div class="col-lg-4 col-md-4"></div>
-                        <div class="col-lg-4 col-md-4">
-                            <div class="btn btn-outline-primary btn-lg btn-block">
-                                Clients
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4">
-                            <div class="btn btn-outline-primary btn-lg btn-block">
-                                Investores
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row ptb-60">
-                        <div class="col-lg-4 col-md-4"></div>
-                        <div class="col-lg-4 col-md-4">
-                            <div class="btn btn-outline-primary btn-lg btn-block">
-                                Mentores
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4">
-                            <div class="btn btn-outline-primary btn-lg btn-block">
-                                Key Management
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="cardwrapper">
+                                <img src="img/boceo/1.jpg"><div class="cardcontentcontainer border border-warning">
+                                    <h2>The Managing Director</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat....
+                                    <a href="aboutus.html" class="btn btn-primary">Read More</a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
         <!-- service section end-->
+        <!--companies area start-->
+        <div class="parallax1">
+            <div class="company-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1>Companies</h1><hr></hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <img src="img/brand/1.png">
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="img/brand/2.png">
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="img/brand/3.png">
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="img/brand/4.png">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <img src="img/brand/5.png">
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="img/brand/6.png">
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="img/brand/3.png">
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="img/brand/1.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--companies area end-->
+        <!--industries and verticals area start-->
+        <div class="parallax2">
+            <div class="industry-area">
+                <div class="container ptb-30">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1>Industry Verticals</h1><hr></hr>
+                        </div>
+                    </div>
+                    <div class="row pb-10">
+                        <div class="col-lg-4">
+                            <div class="card border border-danger" style="width: 18rem;">
+                                <img class="card-img-top" src="img/bod/1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h4>Building Mosques</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="card border border-danger" style="width: 18rem;">
+                                <img class="card-img-top" src="img/bod/1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h4>Blood Banks</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="card border border-danger" style="width: 18rem;">
+                                <img class="card-img-top" src="img/bod/1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h4>Building Madrashas</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="card border border-danger" style="width: 18rem;">
+                                <img class="card-img-top" src="img/bod/1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h4>Employement</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="card border border-danger" style="width: 18rem;">
+                                <img class="card-img-top" src="img/bod/1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h4>Helping Needy People</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="card border border-danger" style="width: 18rem;">
+                                <img class="card-img-top" src="img/bod/1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h4>Doing Charity Works</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+        </div>
+        
+        <!--industries and verticals area end-->
+
         <!-- Main content  -->
         <!--<div class="contact-body">
             <div class="container">
@@ -428,6 +525,18 @@
         </div>-->
         <!--Board of Directores ends-->
         <!--map area-->
+        <div class="map-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1>Find Us Here</h1><hr></hr>
+                    </div>
+                    <div class="col-lg-12">
+                        <div id="map" style="height:600px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!--footer starts-->
         <footer class="footer-bg">
             <div class="footer-top-area pad-30 border-color">
@@ -530,11 +639,147 @@
                     scrollwheel: false,
 
                     // The latitude and longitude to center the map (always required)
-                    center: new google.maps.LatLng(40.6700, -73.9400), // New York
+                    center: new google.maps.LatLng(23.747473, 90.411094), // New York
 
                     // How you would like to style the map. 
                     // This is where you would paste any style found on Snazzy Maps.
-                    styles: [{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffffff"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#ffffff"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":16}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":21}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#dedede"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#ffffff"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#333333"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#f2f2f2"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#fefefe"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#fefefe"},{"lightness":17},{"weight":1.2}]}]
+                    styles: [
+    {
+        "featureType": "landscape.man_made",
+        "elementType": "geometry",
+        "stylers": [
+            {
+                "color": "#f7f1df"
+            }
+        ]
+    },
+    {
+        "featureType": "landscape.natural",
+        "elementType": "geometry",
+        "stylers": [
+            {
+                "color": "#d0e3b4"
+            }
+        ]
+    },
+    {
+        "featureType": "landscape.natural.terrain",
+        "elementType": "geometry",
+        "stylers": [
+            {
+                "visibility": "off"
+            }
+        ]
+    },
+    {
+        "featureType": "poi",
+        "elementType": "labels",
+        "stylers": [
+            {
+                "visibility": "off"
+            }
+        ]
+    },
+    {
+        "featureType": "poi.business",
+        "elementType": "all",
+        "stylers": [
+            {
+                "visibility": "off"
+            }
+        ]
+    },
+    {
+        "featureType": "poi.medical",
+        "elementType": "geometry",
+        "stylers": [
+            {
+                "color": "#fbd3da"
+            }
+        ]
+    },
+    {
+        "featureType": "poi.park",
+        "elementType": "geometry",
+        "stylers": [
+            {
+                "color": "#bde6ab"
+            }
+        ]
+    },
+    {
+        "featureType": "road",
+        "elementType": "geometry.stroke",
+        "stylers": [
+            {
+                "visibility": "off"
+            }
+        ]
+    },
+    {
+        "featureType": "road",
+        "elementType": "labels",
+        "stylers": [
+            {
+                "visibility": "off"
+            }
+        ]
+    },
+    {
+        "featureType": "road.highway",
+        "elementType": "geometry.fill",
+        "stylers": [
+            {
+                "color": "#ffe15f"
+            }
+        ]
+    },
+    {
+        "featureType": "road.highway",
+        "elementType": "geometry.stroke",
+        "stylers": [
+            {
+                "color": "#efd151"
+            }
+        ]
+    },
+    {
+        "featureType": "road.arterial",
+        "elementType": "geometry.fill",
+        "stylers": [
+            {
+                "color": "#ffffff"
+            }
+        ]
+    },
+    {
+        "featureType": "road.local",
+        "elementType": "geometry.fill",
+        "stylers": [
+            {
+                "color": "black"
+            }
+        ]
+    },
+    {
+        "featureType": "transit.station.airport",
+        "elementType": "geometry.fill",
+        "stylers": [
+            {
+                "color": "#cfb2db"
+            }
+        ]
+    },
+    {
+        "featureType": "water",
+        "elementType": "geometry",
+        "stylers": [
+            {
+                "color": "#a2daf2"
+            }
+        ]
+    }
+]
                 };
 
                 // Get the HTML DOM element that will contain your map 
@@ -546,7 +791,7 @@
 
                 // Let's also add a marker while we're at it
                 var marker = new google.maps.Marker({
-                    position: new google.maps.LatLng(40.6700, -73.9400),
+                    position: new google.maps.LatLng(23.747473, 90.411094),
                     map: map,
                     title: 'Snazzy!'
                 });
