image-gallery page added

--- a/IslahAdmin/index.html
+++ b/IslahAdmin/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="css/owl.carousel.css">
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="css/owl.theme.default.css">
+        <link rel="stylesheet" href="css/blueimp-gallery.css">
         <!--all min.css here-->
         <!--<link rel="stylesheet" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="css/jquery-ui.min.css">
@@ -27,6 +28,7 @@
         <link rel="stylesheet" href="css/fontawesome-all.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/animate.min.css">
+        <link rel="stylesheet" href="css/blueimp-gallery.min.css">
         <link rel="stylesheet" href="css/owl.theme.default.min.css">-->
         <!--vendor modernizer js-->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
@@ -131,9 +133,9 @@
                                             Media
                                             </a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                <a class="dropdown-item ttfw" href="#">Image</a>
+                                                <a class="dropdown-item ttfw" href="image-gallery.html">Images</a>
                                                 <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item ttfw" href="#">Gallery</a>
+                                                <a class="dropdown-item ttfw" href="#">Videos</a>
                                             </div>
                                         </li>
                                     </ul>
@@ -621,6 +623,7 @@
         <script src="js/bootstrap.js"></script>
         <script src="js/jquery-ui.js"></script>
         <script src="js/owl.carousel.js"></script>
+        <script src="js/blueimp-gallery.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <!-- Google Map js -->
