video page added-not complete aboutus page added mostly completed

--- a/IslahAdmin/video-gallery.html
+++ b/IslahAdmin/video-gallery.html
@@ -136,7 +136,7 @@
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                 <a class="dropdown-item ttfw" href="#">Image</a>
                                                 <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item ttfw" href="video-gallery.html">Video</a>
+                                                <a class="dropdown-item ttfw" href="#">Gallery</a>
                                             </div>
                                         </li>
                                     </ul>
