--- a/IslahAdmin/aboutus.html
+++ b/IslahAdmin/aboutus.html
@@ -20,7 +20,6 @@
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="css/owl.theme.default.css">
         <link rel="stylesheet" href="css/blueimp-gallery.css">
-        <link rel="stylesheet" href="css/blueimp-gallery-indicator.css">
         <!--all min.css here-->
         <!--<link rel="stylesheet" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="css/jquery-ui.min.css">
@@ -134,9 +133,9 @@
                                             Media
                                             </a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                <a class="dropdown-item ttfw" href="#">Image</a>
+                                                <a class="dropdown-item ttfw" href="image-gallery.html">Images</a>
                                                 <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item ttfw" href="video-gallery.html">Video</a>
+                                                <a class="dropdown-item ttfw" href="video-gallery.html">Videos</a>
                                             </div>
                                         </li>
                                     </ul>
@@ -149,126 +148,189 @@
             </div>
         </header>
         <!--header area ends-->
-        <!--slider area starts-->
-        <div class="slider-area">
-            <div class="slider-active owl-carousel">
-                <img src="img/slider/1.jpg">
-                <img src="img/slider/2.jpg">
-                <img src="img/slider/3.jpg">
+        <div class="parallax">
+            <div class="aboutus">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1>About US</h1><hr></hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="cardwrapper">
+                                <img src="img/boceo/1.jpg"><div class="cardcontentcontainer border border-warning">
+                                    <h2>The Managing Director</h2>
+                                    <p style="position:relative;overflow: hidden;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <!--slider area ends-->
-<!-- The container for the list of example images -->
-<!--<div id="links" class="links">
-    <a href="img/gallery/1.png"><img src="img/gallery/1.png"></a>
-    <a href="img/gallery/1.png"><img src="img/gallery/1.png"></a>
-    <a href="img/gallery/1.png"><img src="img/gallery/1.png"></a>
-    <a href="img/gallery/1.png"><img src="img/gallery/1.png"></a>
-    <a href="img/gallery/1.png"><img src="img/gallery/1.png"></a>
-</div>-->
 
-<!-- Page Content -->
-<div class="parallax1">
-    <div class="container">
-        <h1 class="my-4 text-center text-lg-center">Image Gallery</h1><hr></hr>
-        <div class="row text-center text-lg-left links"  id="links">
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
+        <!-- Main content  -->
+        <div class="contact-body">
+            <div class="container">
+                <div class="team-member">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="heading-title">
+                                <h4>Meet Our Managing Directores</h4><hr></hr>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team">
+                                <div class="image">
+                                    <img src="img/boceo/1.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team">
+                                <div class="image">
+                                    <img src="img/boceo/4.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team">
+                                <div class="image">
+                                    <img src="img/boceo/1.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team last">
+                                <div class="image">
+                                    <img src="img/boceo/4.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team">
+                                <div class="image">
+                                    <img src="img/boceo/1.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team">
+                                <div class="image">
+                                    <img src="img/boceo/4.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team">
+                                <div class="image">
+                                    <img src="img/boceo/1.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team last">
+                                <div class="image">
+                                    <img src="img/boceo/4.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team">
+                                <div class="image">
+                                    <img src="img/boceo/1.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                    <!--<div class="social">
+                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                        <a href="#"><i class="fa fa-twitter"></i></a>
+                                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                                        <a href="#"><i class="fa fa-rss"></i></a>
+                                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                                    </div>-->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team">
+                                <div class="image">
+                                    <img src="img/boceo/4.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team">
+                                <div class="image">
+                                    <img src="img/boceo/1.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="our-team last">
+                                <div class="image">
+                                    <img src="img/boceo/4.jpg" alt="">
+                                </div>
+                                <div class="member">
+                                    <h4>Name</h4>
+                                    <h6>Designation</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- /.container -->
-</div>
-    
-    <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
-<div id="blueimp-gallery" class="blueimp-gallery">
-    <div class="slides"></div>
-    <h3 class="title"></h3>
-    <!-- The placeholder for the description label: -->
-    <p class="description"></p>
-    <a class="prev">‹</a>
-    <a class="next">›</a>
-    <a class="close">×</a>
-    <a class="play-pause"></a>
-    <ol class="indicator"></ol>
-</div>
+        <!-- Main content end -->
         <!--footer starts-->
         <footer class="footer-bg">
             <div class="footer-top-area pad-30 border-color">
@@ -354,10 +416,6 @@
         <script src="js/jquery-ui.js"></script>
         <script src="js/owl.carousel.js"></script>
         <script src="js/blueimp-gallery.min.js"></script>
-        <script src="js/blueimp-gallery-indicator.js"></script>
-        <script src="js/blueimp-gallery-fullscreen.js"></script>
-        <script src="js/jquery.blueimp-gallery.js"></script>
-        <script src="js/blueimp-helper.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <!--<script src="js/owl.carousel.min.js"></script>
