--- a/IslahAdmin/contact.html
+++ b/IslahAdmin/contact.html
@@ -46,14 +46,14 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffffff;">
-                                <a class="navbar-brand" href="index.html"><img src="img/logo/2.png" width="100" height="100" alt=""></a>
+                                <a class="navbar-brand" href="#"><img src="img/logo/2.png" width="100" height="100" alt=""></a>
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav mr-auto">
                                         <li class="nav-item active">
-                                            <a class="nav-link ttfw" href="index.html">Home <span class="sr-only">(current)</span></a>
+                                            <a class="nav-link ttfw" href="#">Home <span class="sr-only">(current)</span></a>
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle ttfw" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -136,7 +136,7 @@
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                 <a class="dropdown-item ttfw" href="#">Image</a>
                                                 <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item ttfw" href="video-gallery.html">Video</a>
+                                                <a class="dropdown-item ttfw" href="#">Gallery</a>
                                             </div>
                                         </li>
                                     </ul>
@@ -149,126 +149,7 @@
             </div>
         </header>
         <!--header area ends-->
-        <!--slider area starts-->
-        <div class="slider-area">
-            <div class="slider-active owl-carousel">
-                <img src="img/slider/1.jpg">
-                <img src="img/slider/2.jpg">
-                <img src="img/slider/3.jpg">
-            </div>
-        </div>
-        <!--slider area ends-->
-<!-- The container for the list of example images -->
-<!--<div id="links" class="links">
-    <a href="img/gallery/1.png"><img src="img/gallery/1.png"></a>
-    <a href="img/gallery/1.png"><img src="img/gallery/1.png"></a>
-    <a href="img/gallery/1.png"><img src="img/gallery/1.png"></a>
-    <a href="img/gallery/1.png"><img src="img/gallery/1.png"></a>
-    <a href="img/gallery/1.png"><img src="img/gallery/1.png"></a>
-</div>-->
-
-<!-- Page Content -->
-<div class="parallax1">
-    <div class="container">
-        <h1 class="my-4 text-center text-lg-center">Image Gallery</h1><hr></hr>
-        <div class="row text-center text-lg-left links"  id="links">
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="img/gallery/1.png" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" src="img/gallery/1.png" alt="">
-                </a>
-            </div>
-        </div>
-    </div>
-    <!-- /.container -->
-</div>
-    
-    <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
-<div id="blueimp-gallery" class="blueimp-gallery">
-    <div class="slides"></div>
-    <h3 class="title"></h3>
-    <!-- The placeholder for the description label: -->
-    <p class="description"></p>
-    <a class="prev">‹</a>
-    <a class="next">›</a>
-    <a class="close">×</a>
-    <a class="play-pause"></a>
-    <ol class="indicator"></ol>
-</div>
+        
         <!--footer starts-->
         <footer class="footer-bg">
             <div class="footer-top-area pad-30 border-color">
