--- a/IslahAdmin/index.html
+++ b/IslahAdmin/index.html
@@ -45,14 +45,14 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffffff;">
-                                <a class="navbar-brand" href="#"><img src="img/logo/2.png" width="100" height="100" alt=""></a>
+                                <a class="navbar-brand" href="index.html"><img src="img/logo/2.png" width="100" height="100" alt=""></a>
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav mr-auto">
                                         <li class="nav-item active">
-                                            <a class="nav-link ttfw" href="#">Home <span class="sr-only">(current)</span></a>
+                                            <a class="nav-link ttfw" href="index.html">Home <span class="sr-only">(current)</span></a>
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle ttfw" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -135,7 +135,7 @@
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                 <a class="dropdown-item ttfw" href="image-gallery.html">Images</a>
                                                 <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item ttfw" href="#">Videos</a>
+                                                <a class="dropdown-item ttfw" href="video-gallery.html">Videos</a>
                                             </div>
                                         </li>
                                     </ul>
